# opel-alpha

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  OPELTx1Configuartion.xml  README.md  abtGstEncoder.cpp  abtGstEncoder.h  abtMisc.cpp  abtMisc.h  build.sh  cmake_install.cmake  main.c  opel.conf  pairing  run_daemons  run_opel
Opel-Manager/: .classpath  .gitignore  .project  AndroidManifest.xml  build.gradle  local.properties
Opel-Manager/jni/: Android.mk  (+2 more)
dep/: opel.conf
framework/: CMakeLists.txt
framework/appcore/: CMakeLists.txt
framework/appcore/inc/: App.h  AppCore.h  AppList.h  AppPackageManager.h  AppPackageRepo.h  AppStatusManager.h  BaseMessage.h  Channel.h  CommChannel.h  DbusChannel.h  DbusManager.h  LocalChannel.h  MainSysAppManager.h  MessageFactory.h  MessageRouter.h  OPELdbugLog.h  cmfw_base.h  cmfw_wfd.h  opel_cmfw_priv.h
framework/appcore/src/: App.cpp  AppCore.cpp  AppList.cpp  AppStatusManager.cpp  BaseMessage.cpp  Channel.cpp  CommChannel.cpp  DbusChannel.cpp  LocalChannel.cpp  MessageRouter.cpp  RemoteFileManager.cpp  main.cpp
framework/camera/: CMakeLists.txt
framework/camera/inc/: Camera.h  CameraCommunicator.h  OPELRawRequest.h  OPELcamProperty.h  OPELcommonUtil.h
framework/camera/src/: CameraCommunicator.cpp  CameraConfigParser.cpp  CameraController.cpp  CameraDevice.cpp  CameraManager.cpp  CameraRequest.cpp  OPELRawRequest.cpp  OPELgstElement.cpp  OPELreplyDBus.cpp  OPELwrapGst.cpp  main.cpp
framework/communication/: CMakeLists.txt
framework/communication/inc/: CommLog.h  CommPort.h  CommRawPacket.h  DeviceController.h  TmpControl.h  opel_cmfw_priv.h  tmp_control.h
framework/communication/src/: BluetoothCommPort.cpp  CommPort.cpp  CommRawPacket.cpp  DeviceController.cpp  TmpControl.cpp  WifiDirectCommPort.cpp  cmfw_bt.cpp  cmfw_wfd.cpp  test_wfd.cpp  tmp_control.cpp
framework/message/: CMakeLists.txt
framework/message/inc/: BaseMessage.h  Channel.h  CommChannel.h  DbusChannel.h  LocalChannel.h  MessageFactory.h  MessageRouter.h
framework/message/src/: BaseMessage.cpp  Channel.cpp  CommChannel.cpp  DbusChannel.cpp  LocalChannel.cpp  MessageFactory.cpp  MessageRouter.cpp
inc/: cmfw_base.h  cmfw_wfd.h  opel_cmfw.h
include/: .OPELcamProperty.h.swo  OPELcamProperty.h  OPELcamRequest.h  OPELcommonUtil.h  OPELconfig.h  OPELglobalRequest.h  OPELgstElement.h  OPELgstElementTx1.h  OPELh264Streaming.h  OPELrawRequest.h
node/: NIL_Comm.node  OPELFaceDetection.node  OPELRecording.node  OPELStreaming.node
opel_app_manager/: CMakeLists.txt  Makefile  cmake_install.cmake
opel_app_manager/inc/: DbusManager.h  _repoClass.h  appPackageManager.h  appPackageRepo.h  appStatusManager.h  cmfw_base.h  cmfw_bt.h  cmfw_log.h  cmfw_wfd.h  commManager.h  deviceManager.h  deviceRepo.h  globalData.h  jsonString.h  mainSysAppManager.h  memoryManager.h  opel_cmfw.h  remoteFileManager.h  serviceDaemonManager.h  serviceDaemonRepo.h
opel_app_manager/src/: DbusManager.cpp  _repoClass.cpp  appPackageManager.cpp  appPackageRepo.cpp  appStatusManager.cpp  commManager.cpp  deviceManager.cpp  deviceRepo.cpp  globalData.cpp  jsonString.cpp  mainSysAppManager.cpp  memoryManager.cpp  remoteFileManager.cpp  serviceDaemonManager.cpp  serviceDaemonRepo.cpp
opel_camfw/: CMakeLists.txt  Makefile  cmake_install.cmake
opel_camfw/include/: OPELglobalRequest.cpp  OPELglobalRequest.h  OPELh264Streaming.cpp  OPELrawRequest.cpp  OPELreplyDBus.cpp  cam_property.h  cam_proxy.h  cam_request.h  cam_status.h  ctrlAPI.h
opel_camfw/sample-client/: test
opel_camfw/src/: Makefile  OPELcamProperty.cpp  TIMESET.txt  cam_cap_check.cpp  cam_cap_check.h  cam_core.cpp  cam_core.h  cam_ctrl.h  cam_property.cpp  cam_record.cpp  cam_status.cpp  cscope.files  cscope.out  deletesem  deletesem.c  main.cpp  run.sh  tags  test.cpp
opel_cmfw/: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake
opel_sensor_manager/: .Makefile.swp  .devices.c.swp  .gitignore  .sensor_manager.c.swp  CMakeLists.txt  Makefile  SENSOR_LIST  build.sh  cmake_install.cmake  cscope.out  devices.c  devices.h  request.c  sensor0_button.c  sensor1_acc.c  sensor2_temp.c  sensor3_sound.c  sensor4_light.c  sensor5_motion.c  sensor6_vib.c  sensor7_touch.c  sensor8_test.c  sensorManager  sensor_manager.c  sensor_manager.h  tags  test
opel_sensor_manager/BUILD_SO/: CMakeLists.txt  README.md  build.sh  devices.c  devices.h  sensor0_button.c  sensor_manager.c  sensor_manager.h  temp_makefile
opel_sensor_manager/build_so/: README.md  temp_makefile
opel_system_server/: CMakeLists.txt
sample-apps/: quick-cam.js  sensor-viewer.js
sample-client/: OPELdbusInterface.cpp  OPELdbusInterface.h  opencv  opencv_test.cpp  test  test_rtp_client.sh
scripts/: install.sh  run_opel  run_opel_tail
src/: CMakeLists.txt  OPELcamProperty.cpp  OPELcamRequest.cpp  OPELcommonUtil.cpp  OPELglobalRequest.cpp  OPELgstElement.cpp  OPELgstElementTx1.cpp  OPELh264Streaming.cpp  OPELrawRequest.cpp  main.cpp
src/api/: CMakeLists.txt
src/api/app/: binding.gyp  nil_dbus_connection.cc
src/api/camera/: OPELRecording.js  OPELStreaming.js  binding.gyp  package.json
src/api/camera/src/: OPELRecordingAPI.cc  OPELRecordingAPI.h  OPELdbusInterface.h
src/api/communication/: comm_binding.cc
src/api/communication/inc/: comm_core.h
src/api/communication/src/: comm_communicator.cpp
src/api/face-detection/: OPELFaceDetection.js
src/api/face-detection/src/: OPELFaceDetection.cc
src/api/sensor/: binding.gyp  nil.cc
src/api/sensor/inc/: sensfw_log.h
src/api/sensor/src/: nil.cc
src/cmfw/: CMakeLists.txt
src/cmfw/inc/: opel_cmfw.h
src/cmfw/src/: cmfw_bt.c  cmfw_wfd.cpp  dhcpd_conf_gen.cpp  opel_cmfw.cpp  test.cpp
src/sensor-manager/: CMakeLists.txt  driver_common.c  sensor3_sound.c  sensor5_motion.c  sensor7_touch.c
src/sensor-manager/BUILD_SO/: CMakeLists.txt  sensor0_button.c  sensor6_vib.c  sensor_manager.c  sensor_manager.h
src/sensor-manager/inc/: .devices.h.swp  devices.h  sensfw_log.h  sensor_manager.h
src/sensor-manager/src/: .sensor_manager.c.swp  sensor_manager.c
(+1071 files in other folders)
